...
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/password2"
        style="@style/registration"
        android:layout_width="391dp"
        android:layout_height="66dp"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="4dp"
        android:hint="@string/confirm_password"
...
